--- a/languages/zh-cn.yml
+++ b/languages/zh-cn.yml
@@ -50,6 +50,21 @@ insight:
     en: live
     img: https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/banner/writing.jpg
 
+资源:
+    zh: 资源
+    en: resources
+    img: https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/banner/writing.jpg
+
+随想:
+    zh: 随想
+    en: think
+    img: https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/banner/writing.jpg
+
+转载:
+    zh: 转载
+    en: reprint
+    img: https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/banner/writing.jpg
+
 #tag
 悦读:
     img: https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/banner/reading.jpg
